syntax = "proto3";
package GoodAI.Arnold.Network;

message CommandRequest {
	enum CommandType {
		Start = 0;
		Pause = 1;
		Stop = 2;
	}
	
	CommandType Command = 1;
}

message GetStateRequest {}
