syntax = "proto3";
package GoodAI.Arnold.Network;

message Error {
	string Message = 1;
}

message StateData {
	enum StateType {
		Empty = 0;
		Running = 1;
		Paused = 2;
		ShuttingDown = 3;
		Invalid = 4;
	}
	
	StateType State = 1;
}

message StateResponse {
	oneof response_oneof {
		Error Error = 1;
		StateData Data = 2;
	}
}